--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>nginx</title>
 </head>
 <body>
-  Hello
+  <script>
+    window.location.href = '/out/docs/getting-started'
+  </script>
 </body>
 </html>
