--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <script>
-    // window.location.href = '/out/docs/getting-started'
+    window.location.href = 'https://sun-bigshan.github.io/sundash-docs/out/docs/getting-started'
   </script>
 </body>
 </html>
